add web builder box component

--- a/interface/style.scss
+++ b/interface/style.scss
@@ -30,13 +30,15 @@
   justify-content: space-between;
 }
 
+
+
 .panel__left {
   width: 80px;
   height: 100vh;
   position: fixed;
+  top: 50;
   left: 0;
-  top: 50px;
-
+  z-index: 1000;
 
   &__btn__container {
     padding: 0px 10px;
@@ -62,12 +64,28 @@
 
 
   .panel__left__element__container {
-    background-color: red;
+
     transform: translateX(80px);
     position: absolute;
     top: 0;
+    width: auto;
+    height: auto;
 
+    .raper {
+      width: 100vw;
+      height: 100vw;
+    }
 
+    .container {
+      height: 100vw;
+      width: 250px;
+      background-color: #242424;
+      display: none;
+    }
+
+    .add-container {
+      display: block;
+    }
   }
 }
 
@@ -97,4 +115,12 @@
 .panel__switcher,
 .panel__devices {
   position: initial;
+}
+
+.app {
+  margin-left: 80px;
+}
+
+.text {
+  text-align: center;
 }
